# serializer version: 1
# name: test_sensors[filter][sensor.filter_battery-data]
  '12'
# ---
# name: test_sensors[filter][sensor.filter_battery-reset]
  '0'
# ---
# name: test_sensors[filter][sensor.filter_current_water_pressure-data]
  '263.3797174'
# ---
# name: test_sensors[filter][sensor.filter_current_water_pressure-reset]
  'unknown'
# ---
# name: test_sensors[filter][sensor.filter_water_flow_rate-data]
  '19.84'
# ---
# name: test_sensors[filter][sensor.filter_water_flow_rate-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_average_daily_water_usage-data]
  '287.691295584'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_average_daily_water_usage-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_battery-data]
  '50'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_battery-reset]
  '0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_current_water_pressure-data]
  '428.8538854'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_current_water_pressure-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_high_water_pressure_today-data]
  '427.474934'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_high_water_pressure_today-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_low_water_pressure_today-data]
  '420.580177'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_low_water_pressure_today-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_peak_water_flow_rate_today-data]
  '13.8'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_peak_water_flow_rate_today-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_total_water_used_today-data]
  '881.13030096168'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_total_water_used_today-reset]
  '0.0'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_water_flow_rate-data]
  '5.77'
# ---
# name: test_sensors[hub][sensor.hub_drop_1_c0ffee_water_flow_rate-reset]
  '0.0'
# ---
# name: test_sensors[leak][sensor.leak_detector_battery-data]
  '100'
# ---
# name: test_sensors[leak][sensor.leak_detector_battery-reset]
  '0'
# ---
# name: test_sensors[leak][sensor.leak_detector_temperature-data]
  '20.1111111111111'
# ---
# name: test_sensors[leak][sensor.leak_detector_temperature-reset]
  '-17.7777777777778'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_battery-data]
  '0'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_battery-reset]
  '0'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_current_water_pressure-data]
  '422.6486041'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_current_water_pressure-reset]
  '0.0'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_temperature-data]
  '21.3888888888889'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_temperature-reset]
  '-17.7777777777778'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_water_flow_rate-data]
  '7.1'
# ---
# name: test_sensors[protection_valve][sensor.protection_valve_water_flow_rate-reset]
  '0.0'
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_current_water_pressure-data]
  '428.8538854'
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_current_water_pressure-reset]
  '0.0'
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_temperature-data]
  '20.4444444444444'
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_temperature-reset]
  '-17.7777777777778'
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_water_flow_rate-data]
  '2.2'
# ---
# name: test_sensors[pump_controller][sensor.pump_controller_water_flow_rate-reset]
  '0.0'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_1_life_remaining-data]
  '59'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_1_life_remaining-reset]
  '0'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_2_life_remaining-data]
  '80'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_2_life_remaining-reset]
  '0'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_3_life_remaining-data]
  '59'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_cartridge_3_life_remaining-reset]
  '0'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_inlet_tds-data]
  '164'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_inlet_tds-reset]
  '0'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_outlet_tds-data]
  '9'
# ---
# name: test_sensors[ro_filter][sensor.ro_filter_outlet_tds-reset]
  '0'
# ---
# name: test_sensors[softener][sensor.softener_battery-data]
  '20'
# ---
# name: test_sensors[softener][sensor.softener_battery-reset]
  '0'
# ---
# name: test_sensors[softener][sensor.softener_capacity_remaining-data]
  '3785.411784'
# ---
# name: test_sensors[softener][sensor.softener_capacity_remaining-reset]
  '0.0'
# ---
# name: test_sensors[softener][sensor.softener_current_water_pressure-data]
  '348.1852285'
# ---
# name: test_sensors[softener][sensor.softener_current_water_pressure-reset]
  'unknown'
# ---
# name: test_sensors[softener][sensor.softener_water_flow_rate-data]
  '5.0'
# ---
# name: test_sensors[softener][sensor.softener_water_flow_rate-reset]
  '0.0'
# ---
